# blinkrate-archived

./: package.json  pnpm-lock.yaml  tailwind.config.ts
server/: Dockerfile  docker-compose.yml  pyproject.toml
server/src/: app.py
server/test/: locate.py
src/app/: globals.css  hero.tsx  layout.tsx  literature.tsx  not-found.tsx  page.tsx  tech-stack.tsx
src/app/api/addUser/: route.ts
src/app/api/detect/: route.ts
src/app/api/getUser/: route.ts
src/app/components/: camera.tsx  footer.tsx  navbar.tsx
src/app/components/elements/: accordion.tsx  button.tsx  input.tsx  select.tsx
src/app/test/: form.tsx  page.tsx
src/app/test/[id]/: camera-verification.tsx  camera.tsx  page.tsx
src/config/: supabase.ts
